--- a/index.html
+++ b/index.html
@@ -1,151 +1,152 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-    <title>Video.js M3U Player</title>
-    <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
-    <style>
-        body { font-family: sans-serif; display: flex; }
-        #video-container { flex: 2; margin-right: 20px; }
-        #playlist { flex: 1; border-left: 1px solid #ccc; padding-left: 20px; max-height: 80vh; overflow-y: auto; }
-        .playlist-item {
-            padding: 10px;
-            cursor: pointer;
-            border-bottom: 1px solid #eee;
-            transition: background-color 0.2s ease;
-        }
-        .playlist-item:hover {
-            background-color: #f0f0f0;
-        }
-        .playlist-item.active {
-            background-color: #e0e0e0;
-            font-weight: bold;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Upscale Gambar Gratis (2x, 4x, dst)</title>
+  <style>
+    body { font-family: Arial,sans-serif; background: #fafafa; margin: 0; }
+    .container {
+      max-width: 430px; margin: 40px auto; padding: 24px;
+      background: #fff; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.06); text-align: center;
+    }
+    h1 { color: #222; margin-bottom: 12px; }
+    p { color: #444; margin-bottom: 20px; }
+    .btn-upload {
+      background: #FFD600; color: #222; font-weight: bold;
+      border: none; border-radius: 8px; padding: 14px 28px; font-size: 1rem; cursor: pointer;
+      margin-bottom: 16px; margin-top: 10px; transition: background 0.2s;
+    }
+    .btn-upload:hover { background: #ffe066; }
+    .btn-upscale {
+      background: #1976d2; color: #fff; border: none; border-radius: 8px;
+      padding: 10px 22px; font-weight: bold; margin-top: 18px; margin-bottom: 18px;
+      cursor: pointer; font-size: 1rem; transition: background 0.2s;
+    }
+    .btn-upscale:hover { background: #1255aa; }
+    .btn-download {
+      background: #e53935; color: #fff; border: none; border-radius: 8px;
+      padding: 10px 22px; font-weight: bold; font-size: 1rem; cursor: pointer;
+      margin-top: 14px; transition: background 0.2s;
+    }
+    .btn-download:hover { background: #b71c1c; }
+    .preview-img, .result-img {
+      max-width: 100%; border-radius: 10px; margin-top: 16px; margin-bottom: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+    input[type="file"] { display: none; }
+    label[for="upscaleTimes"] { font-weight:bold; }
+    select { padding: 6px 10px; border-radius:6px; border:1px solid #bbb; margin-left:8px; }
+    @media (max-width: 600px) { .container { margin: 10px; padding: 10px; } }
+  </style>
 </head>
 <body>
-    <div id="video-container">
-        <video
-            id="my-video"
-            class="video-js vjs-default-skin vjs-big-play-button"
-            controls
-            preload="auto"
-            width="640"
-            height="360"
-            data-setup="{}"
-        >
-            </video>
+  <div class="container">
+    <h1>Upscale Gambar Gratis</h1>
+    <p>Upload gambar untuk di-upscale hingga 2x, 4x, 8x, dst secara otomatis, tanpa bayar & tanpa API key.</p>
+    <label class="btn-upload">
+      Upload Gambar
+      <input type="file" id="fileInput" accept="image/*">
+    </label>
+    <div style="margin-top:12px; margin-bottom:18px;">
+      <label for="upscaleTimes">Tingkat Upscale:</label>
+      <select id="upscaleTimes">
+        <option value="1">2x</option>
+        <option value="2">4x</option>
+        <option value="3">8x</option>
+        <option value="4">16x</option>
+      </select>
     </div>
-
-    <div id="playlist">
-        <h2>Pilih Saluran</h2>
-        <p>Memuat daftar putar...</p>
+    <div id="previewSection" style="display:none;">
+      <h3>Preview</h3>
+      <img id="previewImg" class="preview-img" alt="Preview">
+      <br>
+      <button class="btn-upscale" id="upscaleBtn">Upscale Sekarang</button>
     </div>
+    <div id="resultSection" style="display:none;">
+      <h3>Hasil Upscale</h3>
+      <img id="resultImg" class="result-img" alt="Upscaled">
+      <br>
+      <button class="btn-download" id="downloadBtn">Download</button>
+    </div>
+    <div id="status" style="margin-top:18px;color:#1976d2;font-weight:bold;"></div>
+  </div>
+  <script>
+    // waifu2x.udp.jp API, bertahap tanpa API key
+    const fileInput = document.getElementById('fileInput');
+    const previewSection = document.getElementById('previewSection');
+    const previewImg = document.getElementById('previewImg');
+    const upscaleBtn = document.getElementById('upscaleBtn');
+    const resultSection = document.getElementById('resultSection');
+    const resultImg = document.getElementById('resultImg');
+    const downloadBtn = document.getElementById('downloadBtn');
+    const status = document.getElementById('status');
+    const upscaleTimes = document.getElementById('upscaleTimes');
+    let uploadedFile = null;
+    let resultBlobUrl = null;
 
-    <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
-    <script>
-        const player = videojs('my-video');
-        const playlistContainer = document.getElementById('playlist');
-
-        // Fungsi untuk memuat dan mem-parsing file M3U
-        async function loadM3UPlaylist(m3uUrl) {
-            try {
-                const response = await fetch(m3uUrl);
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                const text = await response.text();
-                return parseM3U(text);
-            } catch (error) {
-                console.error("Gagal memuat atau mem-parsing M3U:", error);
-                playlistContainer.innerHTML = '<p style="color: red;">Gagal memuat daftar saluran.</p>';
-                return [];
-            }
+    fileInput.addEventListener('change', function(e){
+      if (e.target.files && e.target.files[0]) {
+        uploadedFile = e.target.files[0];
+        const reader = new FileReader();
+        reader.onload = function(ev) {
+          previewImg.src = ev.target.result;
+          previewSection.style.display = '';
+          resultSection.style.display = 'none';
+          status.textContent = '';
         }
+        reader.readAsDataURL(uploadedFile);
+      }
+    });
 
-        // Fungsi sederhana untuk mem-parsing M3U (menyesuaikan dengan format M3U Anda)
-        // Ini adalah contoh untuk M3U sederhana, bukan HLS.
-        function parseM3U(m3uContent) {
-            const lines = m3uContent.split('\n');
-            const videos = [];
-            let currentName = 'Unknown Channel';
+    async function upscaleWaifu2x(fileOrBlob) {
+      // Kirim ke waifu2x.udp.jp, default scale=2, noise=3 (maksimal)
+      const formData = new FormData();
+      formData.append('file', fileOrBlob);
+      formData.append('scale', '2');
+      formData.append('noise', '3');
+      const response = await fetch('https://waifu2x.udp.jp/api', {
+        method: 'POST',
+        body: formData
+      });
+      if(!response.ok) throw new Error('Upscale gagal');
+      const data = await response.json();
+      if(!data.output_url) throw new Error('Upscale gagal');
+      // Download hasilnya sebagai blob supaya bisa diulang
+      const imgBlob = await fetch(data.output_url).then(r => r.blob());
+      return imgBlob;
+    }
 
-            for (const line of lines) {
-                const trimmedLine = line.trim();
-                if (trimmedLine.startsWith('#EXTINF')) {
-                    // Coba ekstrak nama saluran dari EXTINF
-                    const match = trimmedLine.match(/,(.*)$/);
-                    if (match && match[1]) {
-                        currentName = match[1].trim();
-                    }
-                } else if (trimmedLine && !trimmedLine.startsWith('#')) {
-                    // Ini adalah URL video
-                    videos.push({
-                        name: currentName,
-                        url: trimmedLine
-                    });
-                    currentName = 'Unknown Channel'; // Reset untuk entri berikutnya
-                }
-            }
-            return videos;
+    upscaleBtn.addEventListener('click', async function(){
+      if (!uploadedFile) return;
+      let n = parseInt(upscaleTimes.value,10); // 1=2x, 2=4x, dst
+      status.textContent = 'Memproses upscale (' + Math.pow(2,n+1) + 'x)...';
+      upscaleBtn.disabled = true;
+      previewSection.style.opacity = 0.6;
+      try {
+        let imgBlob = uploadedFile;
+        for(let i=0;i<=n;i++) {
+          status.textContent = `Upscale tahap ${i+1} dari ${n+1}...`;
+          imgBlob = await upscaleWaifu2x(imgBlob);
         }
-
-        // Fungsi untuk membangun daftar putar di UI
-        function buildPlaylistUI(videos) {
-            playlistContainer.innerHTML = '<h2>Pilih Saluran</h2>'; // Bersihkan konten lama
-            videos.forEach((video, index) => {
-                const item = document.createElement('div');
-                item.classList.add('playlist-item');
-                item.textContent = video.name;
-                item.dataset.url = video.url; // Simpan URL di data attribute
-
-                item.addEventListener('click', () => {
-                    // Hapus kelas 'active' dari semua item
-                    document.querySelectorAll('.playlist-item').forEach(el => el.classList.remove('active'));
-                    // Tambahkan kelas 'active' ke item yang diklik
-                    item.classList.add('active');
-
-                    player.src({
-                        src: video.url,
-                        type: guessMimeType(video.url) // Tebak tipe MIME
-                    });
-                    player.load();
-                    player.play();
-                });
-                playlistContainer.appendChild(item);
-            });
-
-            // Otomatis putar video pertama jika ada
-            if (videos.length > 0) {
-                // Simulasikan klik pada item pertama untuk memutar secara otomatis
-                const firstItem = document.querySelector('.playlist-item');
-                if (firstItem) {
-                    firstItem.click();
-                }
-            }
+        // Tampilkan hasil
+        if(resultBlobUrl) URL.revokeObjectURL(resultBlobUrl);
+        resultBlobUrl = URL.createObjectURL(imgBlob);
+        resultImg.src = resultBlobUrl;
+        resultSection.style.display = '';
+        downloadBtn.onclick = function() {
+          const a = document.createElement('a');
+          a.href = resultBlobUrl;
+          a.download = 'upscaled_' + uploadedFile.name.replace(/\.[^/.]+$/, ".png");
+          a.click();
         }
-
-        // Fungsi sederhana untuk menebak tipe MIME berdasarkan ekstensi file
-        function guessMimeType(url) {
-            if (url.endsWith('.m3u8')) return 'application/x-mpegURL'; // Untuk HLS
-            if (url.endsWith('.mpd')) return 'application/dash+xml'; // Untuk MPEG-DASH
-            if (url.endsWith('.mp4')) return 'video/mp4';
-            if (url.endsWith('.webm')) return 'video/webm';
-            if (url.endsWith('.ogg')) return 'video/ogg';
-            // Tambahkan tipe lain sesuai kebutuhan
-            return ''; // Biarkan Video.js menebak jika tidak yakin
-        }
-
-        // Muat daftar putar saat halaman dimuat
-        document.addEventListener('DOMContentLoaded', () => {
-            const m3uFileUrl = 'playlist.m3u'; // Ganti dengan path ke file M3U Anda
-            loadM3UPlaylist(m3uFileUrl).then(videos => {
-                if (videos.length > 0) {
-                    buildPlaylistUI(videos);
-                } else {
-                    playlistContainer.innerHTML = '<p>Tidak ada saluran ditemukan di daftar putar.</p>';
-                }
-            });
-        });
-    </script>
+        status.textContent = 'Upscale selesai!';
+      } catch (e) {
+        status.textContent = 'Upscale gagal atau server penuh. Coba lagi!';
+      }
+      upscaleBtn.disabled = false;
+      previewSection.style.opacity = 1;
+    });
+  </script>
 </body>
 </html>
